--- a/project-task-manager-demo/src/main/resources/application.properties
+++ b/project-task-manager-demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/project_task_tracker
 spring.datasource.username=postgres
-spring.datasource.password=vagapova2011
+spring.datasource.password=qwerty007
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #spring.datasource.url=jdbc:h2:mem:testdb
